Added more documentation to aliases.

--- a/aliases.config
+++ b/aliases.config
@@ -9,7 +9,12 @@
 
   ; diff and patch
   df  = diff
+  ; diff relative to the current folder. Useful when working with modules.
   dfr = diff --relative
+  ; creates a 'multi-patch file' that can be applied with 'git am'.
+  ; useful when working on a local branch: 'git fp master > foo.patch'
+  ; allows others to re-create your entire local branch, or clearly see all your
+  ; steps for patch review.
   fp  = format-patch --stdout
 
   ; commits
@@ -26,7 +31,7 @@
   sa  = stash
   sap = stash pop
   sal = stash list
-  ; show numbered stash
+  ; show numbered stash: 'git sas 1' shows stash number 1.
   sas = !sh -c 'git stash show -v stash@{$1}' -
 
   ; misc
