Added aliases std, dfc, pp.

--- a/aliases.config
+++ b/aliases.config
@@ -1,6 +1,8 @@
 [alias]
   ; information
   st = status
+  ; status of just the current folder (and subfolders)
+  std = status .
   br  = branch
   bra = branch --all
   ; just the current branch
@@ -9,6 +11,7 @@
 
   ; diff and patch
   df  = diff
+  dfc = diff --cached
   ; diff relative to the current folder. Useful when working with modules.
   dfr = diff --relative
   ; creates a 'multi-patch file' that can be applied with 'git am'.
@@ -16,6 +19,11 @@
   ; allows others to re-create your entire local branch, or clearly see all your
   ; steps for patch review.
   fp  = format-patch --stdout
+  ; patch prepare: makes your files look like the given branch, while remaining
+  ; on the current commit. This allows you to apply a subsequent patch that's
+  ; against the master branch and then make a new commit on your local branch.
+  ; see http://www.drupaler.co.uk/blog/git-tricks-repatching-issue-branch
+  pp = !sh -c 'git checkout "$1" -- . && git reset HEAD .'
 
   ; commits
   co = checkout
