--- a/aliases.config
+++ b/aliases.config
@@ -51,3 +51,6 @@
   c71 = checkout 7.x-1.x
   c62 = checkout 6.x-2.x
   c61 = checkout 6.x-1.x
+  ; manage Drupal core files: for committing updates to core.
+  dcore-log = log modules misc themes includes index.php install.php robots.txt .htaccess
+  dcore-add = add -A modules misc themes includes index.php install.php robots.txt .htaccess
