Fixed drupal core aliases; added drupal core diff.

--- a/aliases.config
+++ b/aliases.config
@@ -52,5 +52,6 @@
   c62 = checkout 6.x-2.x
   c61 = checkout 6.x-1.x
   ; manage Drupal core files: for committing updates to core.
-  dcore-log = log modules misc themes includes index.php install.php robots.txt .htaccess
-  dcore-add = add -A modules misc themes includes index.php install.php robots.txt .htaccess
+  dcore-df  = diff    modules misc themes includes profiles scripts /*.php /*.txt .htaccess
+  dcore-log = log     modules misc themes includes profiles scripts /*.php /*.txt .htaccess
+  dcore-add = add -A  modules misc themes includes profiles scripts /*.php /*.txt .htaccess
