--- a/aliases.config
+++ b/aliases.config
@@ -1,18 +1,25 @@
+; Git aliases.
+; Source at https://github.com/joachim-n/git-aliases-drupal
+
 [alias]
   ; information
   st  = status
   ; status of just the current folder (and subfolders)
   std = status .
-  br  = branch
-  bra = branch --all
-  ; just the current branch
+  ; show just the current branch
   b   = rev-parse --abbrev-ref HEAD
+  br  = branch
+  ; show all branches, including remote
+  bra = branch --all
+  ; list remotes
   rem = remote -v
 
   ; diff and patch
   df  = diff
+  ; show the diff of what's staged
   dfc = diff --cached
-  ; diff relative to the current folder. Useful when working with modules.
+  ; diff relative to the current folder. Useful when working with modules, as
+  ; it creates patches suitable for that module's issue queue.
   dfr = diff --relative
   ; creates a 'multi-patch file' that can be applied with 'git am'.
   ; useful when working on a local branch: 'git fp master > foo.patch'
@@ -32,6 +39,7 @@
   chp = cherry-pick
 
   ; rebase
+  ; interactive rebase: reorder, reword, zap, and combine commits.
   rebi = rebase -i
 
   ; stash
