Added alias dfn.

--- a/aliases.config
+++ b/aliases.config
@@ -18,6 +18,8 @@
   df  = diff
   ; show the diff of what's staged
   dfc = diff --cached
+  ; show only the list of filenames
+  dfn = diff --name-only
   ; diff relative to the current folder. Useful when working with modules, as
   ; it creates patches suitable for that module's issue queue.
   dfr = diff --relative
