Added diff --color-words.

--- a/aliases.config
+++ b/aliases.config
@@ -16,6 +16,7 @@
 
   ; diff and patch
   df  = diff
+  wd  = diff --color-words
   ; show the diff of what's staged
   dfc = diff --cached
   ; show only the list of filenames
