Added head alias.

--- a/aliases.config
+++ b/aliases.config
@@ -9,6 +9,7 @@
   ; show just the current branch
   b   = rev-parse --abbrev-ref HEAD
   br  = branch
+  head = rev-parse HEAD
   ; show all branches, including remote
   bra = branch --all
   ; list remotes
