Added aliases for branch list and current HEAD tag description.

--- a/aliases.config
+++ b/aliases.config
@@ -12,6 +12,12 @@
   head = rev-parse HEAD
   ; show all branches, including remote
   bra = branch --all
+  ; show all branches, sorted by most recent commit.
+  ; see http://stackoverflow.com/questions/5188320/how-can-i-get-a-list-of-git-branches-ordered-by-most-recent-commit
+  brad = for-each-ref --sort=-committerdate refs/heads/ --format='%(committerdate:short) --  %(refname:short)'
+  ; describe current commit, allowing tags
+  desc = describe --tags
+
   ; list remotes
   rem = remote -v
 
