Added command to delete merged issue branches.

--- a/aliases.config
+++ b/aliases.config
@@ -17,6 +17,8 @@
   brad = for-each-ref --sort=-committerdate refs/heads/ --format='%(committerdate:short) --  %(refname:short)'
   ; describe current commit, allowing tags
   desc = describe --tags
+  ; delete merged branches
+  tidy = !sh -c 'git branch --merged | ag "^[[:space:]]+[[:digit:]]+"  | xargs git branch -d'
 
   ; list remotes
   rem = remote -v
