Added 'git rel' alias for listing related branches.

--- a/aliases.config
+++ b/aliases.config
@@ -20,6 +20,9 @@
   ; delete merged branches
   tidy = !sh -c 'git branch --merged | ag "^[[:space:]]+[[:digit:]]+"  | xargs git branch -d'
 
+  ; related branches - with the same issue number.
+  rel = "!perl -e '$branch = qx[git rev-parse --abbrev-ref HEAD]; ($issue) = $branch =~ m[\\b(\\d+)\\b]; print qx[git branch | grep $issue];'"
+
   ; list remotes
   rem = remote -v
 
